# infrastructure

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .sops.yaml  .terraform.lock.hcl  CONTRIBUTING.md  Makefile  README.md  backend.tf  bootstrap.sh  email.tf  emplois.tf  locals.tf  main.tf  marche.tf  providers.tf  pyproject.toml  variables.tf
.github/: dependabot.yml  pull_request_template.md
.github/scripts/: build_matrix.py
.github/workflows/: _terraform-module.yml  dependabot-autofix.yml  infrastructure_emplois_cnav_network_terraform_pull_request.yaml  infrastructure_emplois_cnav_network_terraform_push.yaml  infrastructure_iac_gip_inclusion_buckets_iac_gip_inclusion_tfstate_terraform_pull_request.yaml  infrastructure_iac_gip_inclusion_buckets_iac_gip_inclusion_tfstate_terraform_push.yaml  infrastructure_iac_gip_inclusion_dns_email_terraform_pull_request.yaml  infrastructure_iac_gip_inclusion_dns_email_terraform_push.yaml  infrastructure_iac_gip_inclusion_dns_emplois_terraform_pull_request.yaml  infrastructure_iac_gip_inclusion_dns_emplois_terraform_push.yaml  infrastructure_iac_gip_inclusion_dns_gip_inclusion_terraform_pull_request.yaml  infrastructure_iac_gip_inclusion_dns_gip_inclusion_terraform_push.yaml  infrastructure_iac_gip_inclusion_dns_marche_terraform_pull_request.yaml  tf_apply.yml  tf_plan.yml  (+6 more)
bootstrap/: main.tf  variables.tf
ci/: build_infrastructure_workflows.py  requirements.txt  terraform.yaml.jinja
dns/: main.tf  variables.tf
infrastructure/: README.md  SOPS.md
makefiles/: base.mk  sops.mk  terraform.mk
scripts/: security-scan.sh
(+215 files in other folders)
